# riak-haskell-client

./: .gitignore  .gitmodules  .hgignore  .hgtags  .stack-7.10.3.yaml  .stack-7.8.4.yaml  .stack-8.0.1.yaml  .stack-8.0.2.yaml  .stack-8.2.1.yaml  .style.yaml  .travis.yml  Changes.md  Makefile  README.markdown  README.md  cabal.project  mafia  proto.sh  riak.cabal  stack-7.10.yaml  stack-head.yaml  stack.yaml
.github/workflows/: ci.yml
benchmarks/: Main.hs
protobuf/: Changes.md  README.markdown  exposed-modules.sh  generate-proto.sh  mafia  proto.sh  riak-protobuf.cabal  riak-protobuf.lock-8.2.2
protobuf-lens/: Changes.md  README.markdown  generate.sh  package.yaml  riak-protobuf-lens.cabal
protobuf-lens/app/: MakeLenses.hs  TH.hs
protobuf-lens/src/: MakeLenses.hs
protobuf-lens/src/Network/Riak/Protocol/: Lens.hs
protobuf/proto/: riak.proto  riak_dt.proto  riak_extra.proto  riak_kv.proto  riak_search.proto  riak_ts.proto  riak_yokozuna.proto
protobuf/src/: riak_kv.proto
protobuf/src-proto/Proto/: Riak.hs  Riak_Fields.hs
protobuf/src-proto/Proto/Proto/: Riak.hs  Riak_Fields.hs
protobuf/src/Data/Riak/: Proto.hs
protobuf/src/Network/Riak/: Protocol.hs
protobuf/src/Network/Riak/Protocol/: AuthRequest.hs  BucketKeyPreflistItem.hs  BucketProps.hs  CSBucketRequest.hs  CSBucketResponse.hs  CommitHook.hs  Content.hs  CounterGetRequest.hs  CounterGetResponse.hs  CounterOp.hs  CounterUpdateRequest.hs  CounterUpdateResponse.hs  DeleteRequest.hs  DtFetchRequest.hs  DtFetchResponse.hs  DtOp.hs  DtUpdateRequest.hs  DtUpdateResponse.hs  DtValue.hs  ErrorResponse.hs  GetBucketKeyPreflistRequest.hs  GetBucketKeyPreflistResponse.hs  GetBucketRequest.hs  GetBucketResponse.hs  GetBucketTypeRequest.hs  GetClientIDRequest.hs  GetClientIDResponse.hs  GetRequest.hs  GetResponse.hs  GetServerInfoRequest.hs  IndexObject.hs  IndexRequest.hs  IndexResponse.hs  Link.hs  ListBucketsRequest.hs  ListBucketsResponse.hs  ListKeysRequest.hs  ListKeysResponse.hs  MapEntry.hs  MapField.hs  (+56 more)
protobuf/src/Network/Riak/Protocol/BucketProps/: ReplMode.hs
protobuf/src/Network/Riak/Protocol/DtFetchResponse/: DataType.hs
protobuf/src/Network/Riak/Protocol/IndexRequest/: IndexQueryType.hs
protobuf/src/Network/Riak/Protocol/MapField/: MapFieldType.hs
protobuf/src/Network/Riak/Protocol/MapUpdate/: FlagOp.hs
riak/: Changes.md  mafia  riak.cabal
riak/benchmarks/: Main.hs
riak/src/Network/: Riak.hs
riak/src/Network/Riak/: Basic.hs  CRDT.hs  Connection.hs  Content.hs  Debug.hs  Escape.hs  Functions.hs  Lens.hs  Request.hs  Response.hs  Search.hs  Tag.hs  Types.hs  Value.hs
riak/src/Network/Riak/CRDT/: Ops.hs  Request.hs  Response.hs  Riak.hs  Types.hs
riak/src/Network/Riak/Connection/: Internal.hs  NoPush.hsc
riak/src/Network/Riak/JSON/: Resolvable.hs
riak/src/Network/Riak/Types/: Internal.hs
riak/tests/: CRDTProperties.hs  Properties.hs  README.md  Test.hs  Utils.hs
src/: riakextra.proto
src/Network/: Riak.hs  Riakclient.hs  Riakextra.hs
src/Network/Riak/: Basic.hs  CRDT.hs  Client.hs  Cluster.hs  Connection.hs  Content.hs  Debug.hs  Escape.hs  Functions.hs  JSON.hs  Message.hs  MessagePack.hs  Monoid.hs  Pipeline.hs  Protocol.hs  Request.hs  Resolvable.hs  Response.hs  Search.hs  Simple.hs  Socket.hs  Tag.hs  Types.hs  Value.hs
src/Network/Riak/CRDT/: Ops.hs  Request.hs  Response.hs  Riak.hs  Types.hs
src/Network/Riak/Connection/: Internal.hs  NoPush.hsc  Pool.hs
src/Network/Riak/JSON/: Monoid.hs  Resolvable.hs
src/Network/Riak/Message/: Code.hs  Tag.hs
src/Network/Riak/Protocol/: BucketProps.hs  Content.hs  DelRequest.hs  DeleteRequest.hs  ErrorResponse.hs  GetBucketRequest.hs  GetBucketResponse.hs  GetClientIDRequest.hs  GetClientIDResponse.hs  GetRequest.hs  GetResponse.hs  GetServerInfoRequest.hs  GetServerInfoResponse.hs  Link.hs  ListBucketsRequest.hs  ListBucketsResponse.hs  ListKeysRequest.hs  ListKeysResponse.hs  MapReduce.hs  MapReduceRequest.hs  MapReduceResponse.hs  Pair.hs  PingRequest.hs  PingResponse.hs  PutRequest.hs  PutResponse.hs  ServerInfo.hs  SetBucketRequest.hs  SetClientIDRequest.hs  SetClientIDResponse.hs  SetClientIdRequest.hs
src/Network/Riak/Resolvable/: Internal.hs
src/Network/Riak/Types/: Internal.hs
src/Network/Riak/Value/: Monoid.hs  Resolvable.hs
src/Network/Riakclient/: RpbGetClientIdResp.hs  RpbGetReq.hs  RpbGetResp.hs  RpbGetServerInfoResp.hs  RpbLink.hs  RpbMapRedReq.hs  RpbMapRedResp.hs  RpbPair.hs  RpbSetBucketReq.hs
src/Network/Riakextra/: RpbGetClientIdReq.hs  RpbListBucketsReq.hs  RpbPingReq.hs  RpbPingResp.hs  RpbSetClientIdResp.hs
tests/: CRDTProperties.hs  Common.hs  Internal.hs  Properties.hs  Test.hs  Utils.hs  test.yaml
tests/dsl/Data/: Alacarte.hs
tests/dsl/Network/Riak/: DSL.hs
tests/dsl/Network/Riak/Admin/: DSL.hs
tests/dsl/Network/Riak/Basic/: DSL.hs
tests/dsl/Network/Riak/DSL/: Basic.hs  JSON.hs  Value.hs
