name:                riak
version:             0.1.0.0
synopsis:            A Haskell client for the Riak decentralized data store
description:
  A Haskell client library for the Riak decentralized data
  store, designed for efficiency, ease of use, and flexibility.  Uses
  the Riak protocol buffers API for speed.
  .
  This library is organized to allow a tradeoff between power
  and ease of use.  If you would like a different degree of
  automation with storage and conflict resolution, you may want to
  use one of the following modules (ranked from easiest to most
  tricky to use):
  .
  [Network.Riak] JSON for storage, automatic conflict resolution.
  This is the easiest module to work with.
  .
  [Network.Riak.JSON] JSON for storage, manual conflict resolution.
  .
  [Network.Riak.Value.Monoid] More complex (but still automatic)
  storage, automatic conflict resolution.
  .
  [Network.Riak.Value] More complex (but still automatic) storage,
  manual conflict resolution.
  .
  [Network.Riak.Basic] manual storage, manual conflict resolution.
  This is the most demanding module to work with, as you must encode
  and decode data yourself, and handle all conflict resolution
  yourself.

homepage:            http://github.com/mailrank/riak-haskell-client
license:             OtherLicense
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@mailrank.com>
maintainer:          Bryan O'Sullivan <bos@mailrank.com>
copyright:           Copyright 2011 MailRank, Inc.
                     Portions copyright 2007-2010 Basho Technologies, Inc.
category:            Network
build-type:          Simple
extra-source-files:
  README.markdown
  proto.sh
  src/riakclient.proto
  src/riakextra.proto

cabal-version:       >=1.8

flag debug
  description: allow debug logging
  default: True

flag developer
  description: operate in developer mode
  default: False

library
  hs-source-dirs: src

  exposed-modules:     
    Network.Riak
    Network.Riak.Connection
    Network.Riak.Content
    Network.Riak.Debug
    Network.Riak.Request
    Network.Riak.Response
    Network.Riak.Basic
    Network.Riak.Types
    Network.Riak.JSON
    Network.Riak.JSON.Monoid
    Network.Riak.Value
    Network.Riak.Value.Monoid
    Network.Riak.Protocol.ServerInfo
    Network.Riak.Protocol.BucketProps
    Network.Riak.Protocol.DeleteRequest
    Network.Riak.Protocol.ErrorResponse
    Network.Riak.Protocol.GetBucketRequest
    Network.Riak.Protocol.GetBucketResponse
    Network.Riak.Protocol.GetClientIDResponse
    Network.Riak.Protocol.GetRequest
    Network.Riak.Protocol.GetResponse
    Network.Riak.Protocol.ListBucketsResponse
    Network.Riak.Protocol.ListKeysRequest
    Network.Riak.Protocol.ListKeysResponse
    Network.Riak.Protocol.MapReduceRequest
    Network.Riak.Protocol.MapReduce
    Network.Riak.Protocol.Pair
    Network.Riak.Protocol.PutRequest
    Network.Riak.Protocol.PutResponse
    Network.Riak.Protocol.SetBucketRequest
    Network.Riak.Protocol.SetClientIDRequest
    Network.Riak.Protocol.PingRequest
    Network.Riak.Protocol.GetClientIDRequest
    Network.Riak.Protocol.GetServerInfoRequest
    Network.Riak.Protocol.ListBucketsRequest

  other-modules:       
    Network.Riak.Monoid
    Network.Riak.Protocol.Link
    Network.Riak.Connection.Internal
    Network.Riak.Connection.NoPush
    Network.Riak.Protocol.Content
    Network.Riak.Tag
    Network.Riak.Types.Internal
    Network.Riak.Protocol
  
  build-depends:       
    aeson,
    attoparsec >= 0.8.4.0,
    base == 4.*,
    binary,
    bytestring,
    containers,
    network >= 2.3,
    protocol-buffers >= 1.8.0,
    protocol-buffers-descriptor >= 1.8.1,
    pureMD5,
    random

  if flag(debug)
    cpp-options: -DASSERTS -DDEBUG

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all
    cpp-options: -DASSERTS -DDEBUG

  ghc-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: http://github.com/mailrank/riak-haskell-client
