name:           riak-protobuf-lens
version:        0.23.0.0
synopsis:       Lenses for riak-protobuf
description:
  A set of Haskell lenses for interacting with the protocol buffer
  API of the Riak decentralized data store.
category:       Network
homepage:       https://github.com/riak-haskell-client/riak-haskell-client#readme
bug-reports:    https://github.com/riak-haskell-client/riak-haskell-client/issues
maintainer:     Tim McGilchrist <timmcgil@gmail.com>, Mitchell Rosen <mitchellwrosen@gmail.com>
license:        OtherLicense
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    Changes.md
    generate.sh
    README.markdown

source-repository head
  type: git
  location: https://github.com/riak-haskell-client/riak-haskell-client
  subdir: protobuf-lens

flag developer
  description: operate in developer mode
  default: False
  manual: True

executable generate
  main-is: MakeLenses.hs
  hs-source-dirs:
      app
  if flag(developer)
    ghc-options: -ddump-splices -dppr-cols=200 -ddump-to-file

  build-depends:
      base             >= 3 && <5
    , bytestring
    , containers
    , microlens        < 0.5
    , microlens-th     < 0.5
    , riak-protobuf    == 0.23.*
    , template-haskell
  other-modules:
      TH
  default-language: Haskell2010

library
  hs-source-dirs:
      src
  build-depends:
      base             >= 3 && <5
    , bytestring
    , containers
    , riak-protobuf    == 0.23.*
  exposed-modules:
      Network.Riak.Protocol.Lens
  default-language: Haskell2010
