name:                riak-protobuf
version:             1.0.0
synopsis:            Haskell types for the Riak protocol buffer API
description:
  A set of Haskell types for interacting with the protocol buffer
  API of the Riak decentralized data store.

homepage:            http://github.com/riak-haskell-client/riak-haskell-client
license:             OtherLicense
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@mailrank.com>
maintainer:          Mark Hibberd <mark@hibberd.id.au>, Tim McGilchrist <timmcgil@gmail.com>
copyright:           Copyright 2011 MailRank, Inc.
                     Portions copyright 2007-2010 Basho Technologies, Inc.
category:            Network
build-type:          Simple
extra-source-files:
  Changes.md
  README.markdown
  generate-proto.sh
  proto/riak.proto
  proto/riak_dt.proto
  proto/riak_extra.proto
  proto/riak_kv.proto
  proto/riak_search.proto
  proto/riak_ts.proto
  proto/riak_yokozuna.proto
cabal-version:       >=1.8
tested-with:         GHC == 8.0.2,
                     GHC == 8.2.2,
                     GHC == 8.4.4,
                     GHC == 8.6.3
library
  hs-source-dirs:
    src,
    src-proto

  exposed-modules:
    Data.Riak.Proto

  other-modules:
    Proto.Riak
    Proto.Riak_Fields

  build-depends:
    base == 4.*,
    proto-lens >= 0.4.0 && < 0.6.1,
    proto-lens-runtime >= 0.4.0 && < 0.6.1

source-repository head
  type:     git
  location: http://github.com/riak-haskell-client/riak-haskell-client
